fix styles of DiscoverMasonMint section on mobile

--- a/src/components/DisocoverMasonMintSection/DiscoverMasonMintSection.module.scss
+++ b/src/components/DisocoverMasonMintSection/DiscoverMasonMintSection.module.scss
@@ -4,10 +4,6 @@
   height: 500vh;
   margin-top: -100rem;
   background-color: var(--white);
-
-  @media (width <= $breakpoint-mob) {
-    margin-top: -400rem;
-  }
 }
 
 .stickyContainer{
